# r1cs-nark

./: Cargo.toml  README.md
benches/: r1cs_prove.rs
src/: commitment.rs  lib.rs  prng.rs  transcript.rs  utils.rs
src/accumulation/: mod.rs
src/accumulation/hadamard/: acc_prover.rs  acc_verifier.rs  mod.rs
src/accumulation/r1cs/: acc_prover.rs  acc_verifier.rs  mod.rs  utils.rs
src/predicates/: mod.rs
src/predicates/hadamard/: hadamard.rs  mod.rs
src/predicates/r1cs/: mod.rs  prover.rs  r1cs.rs  verifier.rs
