[package]
name = "r1cs-nark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = { git = "https://github.com/DanTehrani/halo2curves", branch = "secq256k1" }
#poseidon-transcript = { git = "https://github.com/DanTehrani/poseidon-transcript" }
poseidon-transcript = { path = "../poseidon-transcript" }
sha3 = "0.8.2"
digest = "0.8.1"
rand_core = "0.6.4"
multiexp = "0.3.1"
ff = "0.12.0"
zeroize = { version = "1", default-features = false }


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "r1cs_prove"
harness = false